# alphaess-aio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code_quality.yml  release.yml
alphaessaio/: __init__.py  client.py  response.py
tests/: test_client.py
